<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018-2021 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <!-- Keyboard setting strings -->
    <string name="keyboard_settings_title">Advanced keyboard settings</string>

    <string name="keyboard_layout_title">Physical layout</string>

    <string name="keyboard_fnload_title">Enable special FN functions</string>
    <string name="keyboard_fnload_summary">Allow FN-level to be translated to special functions</string>

    <string name="keyboard_keymap_custom_title">Custom keymap</string>
    <string name="keyboard_keymap_custom_summary_enabled">Using user customized keymap</string>
    <string name="keyboard_keymap_custom_summary_disabled">No custom keymap available</string>

    <string name="keyboard_keymap_spacepower_title">FN + SPACE sends POWER</string>
    <string name="keyboard_keymap_spacepower_summary">Emulate power key with function and space keys</string>

    <string name="keyboard_keymap_fnkeys_title">FN + top row sends F1-F12</string>
    <string name="keyboard_keymap_fnkeys_summary">Emulate F1-F12 keys with function and the top row keys</string>

    <string name="keyboard_keymap_pageinsertkeys_title">FN + arrows to PAGE keys and INSERT to DELETE</string>
    <string name="keyboard_keymap_pageinsertkeys_summary">Emulate PAGE UP/DOWN, HOME/END and DELETE keys for FN modifier</string>

    <string name="keyboard_fn_l_key_title">Expose FN_L key to applications</string>
    <string name="keyboard_fn_l_key_summary">Choose behaviour of left FN key</string>

    <string name="keyboard_fn_r_key_title">Expose FN_R key to applications</string>
    <string name="keyboard_fn_r_key_summary">Choose behaviour of right FN key</string>

    <string name="keyboard_fx_key_title">Expose FX key to applications</string>
    <string name="keyboard_fx_key_summary">Choose behaviour of FX / F(x)tec key</string>

    <string name="keyboard_fastpoll_title">Fast poll</string>
    <string name="keyboard_fastpoll_summary">Poll the keyboard at a faster rate (\"Gaming mode\")</string>

    <!-- Touchscreen settings strings -->
    <string name="touchscreen_settings_title">Touchscreen</string>
    <string name="touchscreen_settings_summary">Margin</string>

    <string name="touchscreen_margin_title">Margin</string>
    <string name="touchscreen_margin_summary">Margin level: %d</string>

    <!-- Setup wizard integration -->
    <string name="setupwizard_title">Keyboard settings</string>
    <string name="setupwizard_summary">This device is available with different hardware keyboard layouts.
In order for the device to be able to send the correct keys, please set the actual keyboard layout below.</string>
    <string name="setupwizard_next">Next</string>
</resources>
